scss/components/Navigation.scss
.app-navigation {
  display: none;
  flex-direction: column;
  margin-top: -1.3/10 * $header-height;

  @media (min-width: $width-display-full-menu) {
    margin-top: 0;
    display: flex;
    flex-direction: row;
  }
}

.app-navigation.is-shown-on-small-screens {
  display: flex;
}

  .app-navigation-link {
    color: inherit;
    text-decoration: none;
    fill: currentColor;
    vertical-align: middle;
    padding: 0.8rem;
    line-height: 1;

    &:hover {
      color: $dark-text-color;
    }

    @media (min-width: $width-display-full-menu) {
      padding: 0 2.4rem;
      max-height: 1em;
      display: inline-block;
      min-height: 1em;
    }
  }

    .app-navigation-link-img {
      display: block;
      min-width: 1em;
      vertical-align: middle;
    }

      .app-navigation-link-img svg {
        min-height: 1em;
        max-height: 1em;
      }

